2012-11-19  Pino Toscano  <toscano.pino@tiscali.it>

	* sysdeps/mach/hurd/syncfs.c: New file.

2012-11-19  Siddhesh Poyarekar  <siddhesh@redhat.com>

	[BZ #14719]
	* nss/getXXbyYY_r.c (INTERNAL (REENTRANT_NAME)): Set h_errno to
	NETDB_INTERNAL when NSS_STATUS_UNAVAIL.
	* resolv/nss_dns/dns-host.c (_nss_dns_gethostbyname3_r): Set
	h_errno to NETDB_INTERNAL when errno is EMFILE or ENFILE.
	(_nss_dns_gethostbyname4_r): Likewise.
	* sysdeps/posix/getaddrinfo.c (gaih_inet): Set result to
	EAI_SYSTEM if NSS_STATUS_UNAVAIL.

2012-11-19  Peng Haitao  <penght@cn.fujitsu.com>

	[BZ #13763]
	* sunrpc/bindrsvprt.c: Add lock to protect static variable.

2012-11-19  Steve McIntyre  <steve.mcintyre@linaro.org>

	* sysdeps/generic/ldconfig.h (FLAG_AARCH64_LIB64): New macro.
	* elf/cache.c (print_entry): Print ",AArch64" for
	FLAG_AARCH64_LIB64

	* sysdeps/generic/ldconfig.h (FLAG_ARM_LIBHF): New macro.
	* elf/cache.c (print_entry): Print ",hard-float" for
	FLAG_ARM_LIBHF.

2012-11-18  David S. Miller  <davem@davemloft.net>

	With help from Joseph Myers.
	* sysdeps/ieee754/flt-32/e_j0f.c (__ieee754_y0f): Adjust tinyness
	cutoff to 2**-13.
	* sysdeps/ieee754/flt-32/e_j1f.c (__ieee754_y1f): Adjust tinyness
	cutoff to 2**-25.
	* sysdeps/ieee754/ldbl-128/e_j0l.c (U0): New constant.
	( __ieee754_y0l): Avoid arithmetic underflow when 'x' is very
	small.
	* sysdeps/ieee754/ldbl-128/e_j1l.c (__ieee754_y1l): Likewise.
	* math/libm-test.inc (y0_test): New tests.
	(y1_test): New tests.
	* sysdeps/i386/fpu/libm-test-ulps: Update.
	* sysdeps/x86_64/fpu/libm-test-ulps: Update.
	* sysdeps/sparc/fpu/libm-test-ulps: Update.

2012-11-18  Andreas Schwab  <schwab@linux-m68k.org>

	* configure.in (libc_cv_ld_gnu_indirect_function): Use .quad on
	64-bit targets.
	* configure: Regenerated.

2012-11-17  David S. Miller  <davem@davemloft.net>

	[BZ #14811]
	* sysdeps/ieee754/ldbl-128/e_powl.c (__ieee754_powl): Saturate
	nonzero exponents with absolute value below 0x1p-128 to +/-
	0x1p-128.
